# ds_dashboard

./: charts.py  dashboard.py  db_connect.py  debug_states.py  docker-compose.yml  geo_map.py  layout.py  main.py  plots.py  pyproject.toml
gpd/: inegi_refcenesta_2010.sld
sql/: schema.sql  seed-data.sql
